# pocket-cli

./: pyproject.toml
pocket_cli/: app.py  cli.py  config.py  storage.py  utils.py
